2.78 VSE no longer caching Node Editor scene strips #49589

Closed
opened 2016-10-06 13:40:08 +02:00 by PETER · 11 comments

System Information
Windows 10, 64 , 16Gb RAM
AMD Radeon HD 6450

Blender Version
2.78

Short description of error
Just updated from 2.77a to 2.78, loaded my project and noticed VSE does not cache at all Node Editor scene strips. 2.77a VSE does cache as long as I check "no sinc" playback.

Exact steps for others to reproduce the error
Create a new scene in Node Editor. Input a movie clip and aply some efects, transforms, tracks, etc.
Load this scene into VSE as scene strip.
Refresh sequencer
Check no sync playback.
Playback the scene for caching.
Playback again. No effect.

If You do this in 2.77a, the second playback is perfectly smooth, it has been cached. (Same settings)

**System Information** Windows 10, 64 , 16Gb RAM AMD Radeon HD 6450 **Blender Version** 2.78 **Short description of error** Just updated from 2.77a to 2.78, loaded my project and noticed VSE does not cache at all Node Editor scene strips. 2.77a VSE does cache as long as I check "no sinc" playback. **Exact steps for others to reproduce the error** Create a new scene in Node Editor. Input a movie clip and aply some efects, transforms, tracks, etc. Load this scene into VSE as scene strip. Refresh sequencer Check no sync playback. Playback the scene for caching. Playback again. No effect. If You do this in 2.77a, the second playback is perfectly smooth, it has been cached. (Same settings)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @PETER123

Added subscriber: @PETER123

#49859 was marked as duplicate of this issue

#49859 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

It is always a good idea to attach simple small .blend file which demonstrates the issue.

It is always a good idea to attach simple small .blend file which demonstrates the issue.
Author

edicion.blend

Here I upload a .blend file.
It requires a movie clip and a small image (text in the original) wich I have not uploaded. I think anything similar will replace them OK.

[edicion.blend](https://archive.blender.org/developer/F374701/edicion.blend) Here I upload a .blend file. It requires a movie clip and a small image (text in the original) wich I have not uploaded. I think anything similar will replace them OK.
Member

Added subscriber: @Bardas

Added subscriber: @Bardas

Added subscriber: @iss

Added subscriber: @iss

When rendering scene, cache is cleared. Currently the cache is global, so it prevents caching.

D3934: VSE cache with frame prefetching (WIP) will fix this, no further investigation was done now.

When rendering scene, cache is cleared. Currently the cache is global, so it prevents caching. [D3934: VSE cache with frame prefetching (WIP)](https://archive.blender.org/developer/D3934) will fix this, no further investigation was done now.

This issue was referenced by bc597eb487

This issue was referenced by bc597eb4878913097fff0a973497e3900a7d8908

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49589
No description provided.