Fix T49589: 2.78 VSE no longer caching Node Editor scene strips

Sequencer cache was cleared when rendering compositor output.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D4758